--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.24.1",
     "axios": "^1.1.3",
-    "immutable": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +41,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "src/index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DavidCortesA/pokedux.git"
+  },
+  "keywords": [
+    "'pokemon'"
+  ],
+  "author": "David Cortez",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DavidCortesA/pokedux/issues"
+  },
+  "homepage": "https://github.com/DavidCortesA/pokedux#readme"
 }
