--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://davidcortesa.github.io/pokedux/",
+  "homepage": "https://github.com/DavidCortesA/pokedux#readme",
   "name": "pokedux",
   "version": "0.1.0",
   "private": true,
@@ -47,7 +47,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "src/index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DavidCortesA/pokedux.git"
@@ -59,6 +61,5 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/DavidCortesA/pokedux/issues"
-  },
-  "homepage": "https://github.com/DavidCortesA/pokedux#readme"
+  }
 }
