--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/DavidCortesA/pokedux#readme",
+  "homepage": "https://davidcortesa.github.io/pokedux/",
   "name": "pokedux",
   "version": "0.1.0",
   "private": true,
